<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Login">

    <data>
        <variable
            name="viewModel"
            type="com.embehome.embehome.viewModel.LoginViewModel" />
    </data>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@drawable/main_bg">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:background="@drawable/login_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/logo"
                android:src="@drawable/loginlogo"
                app:layout_constraintBottom_toBottomOf="@+id/textView184"
                app:layout_constraintEnd_toEndOf="@+id/textView184"
                app:layout_constraintStart_toStartOf="@+id/textView183"
                app:layout_constraintTop_toTopOf="@+id/textView183"
                android:visibility="gone"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email_layout"
                android:layout_width="@dimen/null_space_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="30dp"
                style="@style/RoundedTextInputLayout"
                app:hintEnabled="false"
                app:errorEnabled="@{viewModel.errorEmail}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_title"
                app:startIconDrawable="@drawable/login_user"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email"
                    style="@style/textField"
                    android:hint="Email"
                    android:background="@drawable/rounded_white_bg_with_border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_paswd_layout"
                 android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:drawablePadding="@dimen/padding_small_5dp"
                android:layout_marginTop="@dimen/space_small_8dp"
                style="@style/RoundedTextInputLayout"
                app:hintEnabled="false"
                app:errorEnabled="@{viewModel.errorPassword}"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_email_layout"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/login_lock">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_paswd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_white_bg_with_border"
                    android:hint="@string/hint_password"
                    android:text="@={viewModel.paswd}"
                    android:inputType="textPassword"
                    style="@style/textField"
                    app:passwordToggleEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/login_title"
                style="@style/H5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="20dp"
                android:text="@string/login"
                android:textColor="@color/title_color"
                android:fontFamily="@font/nunito_sans_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.447" />

            <TextView
                android:id="@+id/login_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_large_32dp"
                android:onClick="@{() -> viewModel.forgotPassword()}"
                android:padding="@dimen/padding_med_8dp"
                android:text="@string/forgot"
                android:textColor="@color/forgot_passward_color"
                android:textSize="@dimen/heading_sub_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_paswd_layout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"

                android:layout_marginEnd="24dp"

                android:enabled="@{viewModel.btnEnable}"
                android:onClick="@{() -> viewModel.submit()}"
                android:text="@string/login_txt"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                app:backgroundTint="@color/login_btn_bg"
                app:layout_constraintCircleRadius="@dimen/radius_small_5dp"
                app:layout_constraintEnd_toEndOf="@+id/login_register_hint"
                app:layout_constraintStart_toStartOf="@+id/login_register_hint"
                app:layout_constraintTop_toBottomOf="@+id/login_forgot" />

            <TextView
                android:id="@+id/login_register_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/register_hint"
                android:textColor="@android:color/black"
                android:textSize="@dimen/H6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_submit"
                 />

            <TextView
                android:id="@+id/login_registerr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{() -> viewModel.register()}"
                android:layout_marginLeft="5dp"
                android:text="@string/signup_text"
                android:textColor="@color/login_btn_bg"
                android:textSize="@dimen/H6"

                app:layout_constraintStart_toEndOf="@+id/login_register_hint"
                app:layout_constraintTop_toBottomOf="@+id/login_submit" />
<!--            <TextView-->
<!--                android:id="@+id/tryDemo"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:onClick="@{() -> viewModel.register()}"-->
<!--                android:padding="@dimen/space_med_16dp"-->
<!--                android:text="@string/tryDemo"-->
<!--                android:textColor="#2f2f2f"-->
<!--                android:textSize="@dimen/H6"-->
<!--app:layout_constraintEnd_toStartOf="@id/clickhere"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/login_registerr" />-->
<!--            <TextView-->
<!--                android:id="@+id/clickhere"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:onClick="@{() -> viewModel.register()}"-->
<!--                android:padding="@dimen/space_med_16dp"-->
<!--                android:text="@string/clickhere"-->
<!--                android:textColor="#cd9548"-->
<!--                android:textSize="@dimen/H6"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/login_registerr"-->
<!--                app:layout_constraintStart_toEndOf="@id/tryDemo"/>-->

            <ProgressBar
                android:id="@+id/indeterminateBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textView183"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                app:layout_constraintBottom_toTopOf="@+id/login_email_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25" />

            <TextView
                android:id="@+id/textView184"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                app:layout_constraintBottom_toTopOf="@+id/login_email_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.65" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>


</layout>