<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.embehome.embehome.viewModel.AddHubViewModel" />
        <variable
            name="view"
            type="android.view.View" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HubAdd">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/app_icon_wh"
        android:layout_height="@dimen/app_icon_wh"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="@{() -> viewModel.addHubBack()}"
        android:padding="@dimen/app_icon_padding"
        android:src="@drawable/tt_cmn_enable_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@{viewModel.hubTitle}"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="@{viewModel.swapView ? view.VISIBLE : view.GONE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <ImageView
            android:id="@+id/hub_image"
            android:layout_width="@android:dimen/thumbnail_width"
            android:layout_height="@android:dimen/thumbnail_height"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/place_holder_2"
            android:visibility="visible"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/RoundedTextInputLayout"
            app:hintEnabled="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large_32dp"
            android:layout_marginEnd="@dimen/space_large_32dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_hub_name"
                android:maxLines="1"
                style="@style/TTEditTextBox"
                android:background="@drawable/rounded_white_bg_with_border"
                android:text="@={viewModel.hubName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hub_image"
            android:layout_marginBottom="@dimen/space_small_8dp"
            app:layout_constraintBottom_toTopOf="@+id/hub_image"
            app:layout_constraintStart_toStartOf="@+id/hub_image" />

        <TextView
            android:id="@+id/hub_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="@dimen/space_med_16dp"
            android:text="@{viewModel.hubMessage}"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_hub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/loginBtn"
            android:onClick="@{() -> viewModel.saveHub()}"
            android:text="@{viewModel.actionBtn}"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView170" />

        <TextView
            android:id="@+id/add_hub_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_med_16dp"
            android:layout_marginBottom="@dimen/space_xl_64dp"
            android:padding="@dimen/padding_large_10dp"
            android:text="Skip"
            android:textColor="@android:color/holo_blue_light"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_hub" />

        <TextView
            android:id="@+id/textView170"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="@dimen/padding_large_10dp"
            android:text="@string/change_image"
            android:onClick="@{() -> viewModel.changeView()}"
            android:textColor="@color/link"
            app:layout_constraintEnd_toEndOf="@+id/hub_image"
            app:layout_constraintStart_toStartOf="@+id/hub_image"
            app:layout_constraintTop_toBottomOf="@+id/hub_image" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="@{viewModel.swapView ? view.GONE : view.VISIBLE}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <TextView
            android:id="@+id/textView169"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_icon"
            style="@style/Heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/add_hub_image_recycler"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView169"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/_image_grid_big" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>